syntax = "proto2";

package decoderbufs;

option java_package = "io.debezium.connector.kingbasees.proto";
option java_outer_classname = "PgProto";
option optimize_for = SPEED;

enum Op {
  UNKNOWN = -1;
  INSERT = 0;
  UPDATE = 1;
  DELETE = 2;
  BEGIN = 3;
  COMMIT = 4;
}

message Point {
  required double x = 1;
  required double y = 2;
}

message DatumMessage {
  optional string column_name = 1;
  optional int64 column_type = 2;

  oneof datum {
    bool datum_null = 3;
    int32 datum_int32 = 4;
    int64 datum_int64 = 5;
    float datum_float = 6;
    double datum_double = 7;
    bool datum_bool = 8;
    string datum_string = 9;
    bytes datum_bytes = 10;
    Point datum_point = 11;
    bool datum_missing = 12;
  }
}

message TypeInfo {
  required string modifier = 1;
  required bool value_optional = 2;
}

message RowMessage {
  optional uint32 transaction_id = 1;
  optional uint64 commit_time = 2;
  optional string schema = 3;
  optional string table = 4;
  optional Op op = 5;
  repeated DatumMessage new_tuple = 6;
  repeated DatumMessage old_tuple = 7;
  repeated TypeInfo new_typeinfo = 8;
  repeated uint64 unknown_9 = 9;
  repeated uint64 unknown_10 = 10;
}
